Fixed add task overflow bug

--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -1,5 +1,4 @@
 .app-header {
-  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
