--- a/src/styles/cmps/_board-sub-header.scss
+++ b/src/styles/cmps/_board-sub-header.scss
@@ -1,5 +1,4 @@
 .board-sub-header {
-  min-height: $sub-header-height;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -7,14 +6,14 @@
   color: #fff;
   padding-inline-start: 20px;
   padding-inline-end: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin: 10px 0;
 
   .left-menu,
   .right-menu {
     gap: 10px;
     flex-wrap: wrap;
   }
+
   p {
     margin: 0;
     padding: 0;
@@ -65,6 +64,6 @@
 
 @media (min-width: $break-normal) {
   .board-sub-header {
-    margin: 0;
+    height: $sub-header-height;
   }
 }
