--- a/src/styles/cmps/_members-list.scss
+++ b/src/styles/cmps/_members-list.scss
@@ -1,5 +1,4 @@
 .members-list {
   display: flex;
-  align-items: center;
   background: none;
 }
