--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -11,7 +11,7 @@ $layoutPadding: 20px;
 
 // Breakpoints
 $break-narrow: 460px;
-$break-normal: 720px;
+$break-normal: 640px;
 $break-wide: 960px;
 
 // Header Footer Height
